<resources>
    <string name="app_name">Yuhul</string>
    <string name="title_interval">Interval</string>
    <string name="title_home">Online</string>
    <string name="title_file">Offline</string>
    <string name="title_history">History</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Settings</string>
    <string name="title_more">More</string>
    <string name="title_user">User</string>
    <string name="title_add_user">Add User</string>
    <string name="title_edit_user">Edit User</string>
    <string name="title_height_to_csa">Height to CSA</string>
    <string name="hint_pulm_dia"><font size="12">Pulm.Dia. (mm) ex. 21±4</font></string>
    <string name="hint_height"><font size="12">Height(cm)</font></string>
    <string name="hint_user_id"><font size="12">ID card number ex. A123456789</font></string>
    <string name="first_name"><font size="12">First Name</font></string>
    <string name="last_name"><font size="12">Last Name</font></string>
    <string name="angle_hint"><font size="12">Angle(Degree)</font></string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="action_select">Select</string>
    <string name="action_del">Delete</string>
    <string name="vti_mode_strong_peak">Strong Peak</string>
    <string name="vti_mode_two_point">Two Points</string>
    <string name="title_save">Save</string>
    <string name="title_action">Action</string>
    <string name="interval_title">Interval(min):</string>
    <string name="duration_title">Duration(min):</string>
    <string name="hr_title">HR</string>
    <string name="hr_unit">beats/min</string>
    <string name="vpk_title">Vpk</string>
    <string name="vpk_unit">m/sec</string>
    <string name="co_title">CO</string>
    <string name="co_unit">liter/min</string>
    <string name="sv_title">SV</string>
    <string name="ml_unit">ml</string>
    <string name="vti_title">VTI</string>
    <string name="cm_unit">cm</string>
    <string name="try_off">Try</string>
    <string name="try_on">Stop</string>
    <string name="calculate">Calculate</string>
    <string name="rec_off">Rec</string>
    <string name="rec_on">Stop</string>
    <string name="open_btn">Open</string>
    <string name="play_btn">Play</string>
    <string name="pause_btn">Pause</string>
    <string name="show_vit_switch">Show VTI</string>
    <string name="close_btn">Close</string>
    <string name="bluetooth_pair_start">Pairing started…\nPlease wait…</string>
    <string name="bluetooth_pair_unpair_failed">Pair/Unpair failed</string>
    <string name="bluetooth_pair_to_connect">Connect</string>
    <string name="bluetooth_unpair_to_connect">Connect</string>
    <string name="alert_message_bluetooth_connect">The BLE device is connected</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_child_home">Home</string>
    <string name="navigation_drawer_child_ble">BLE Products</string>
    <string name="navigation_drawer_child_mobile">CySmart Mobile</string>
    <string name="navigation_drawer_child_contact">Contact Us</string>
    <string name="cab_delete">Delete</string>
    <string name="image_navigation_icon">Navigation icon</string>
    <string name="image_splash_logo">Splash logo</string>
    <string name="image_navigation_drawer_logo">navigation logo</string>
    <string name="image_hrm_ee_icon" translatable="false">heart rate monitor energy icon</string>
    <string name="image_hrm_rr_icon" translatable="false">heart rate monitor rr icon</string>
    <string name="image_health_temp_measurement_heart" translatable="false">health temperature thermometer icon</string>
    <string name="image_battery_service_level" translatable="false">battery level icon</string>
    <string name="image_bluetooth_logo" translatable="false">bluetooth logo</string>
    <string name="glucose_icon" translatable="false">glucose icon</string>
    <string name="capsense_button_item" translatable="false">CapSense button icon</string>
    <string name="image_actionbar_bg_color">background color</string>
    <string name="image_sensor_hub_graph" translatable="false">Sensor hub graph image</string>
    <string name="image_sensor_hub_accelerometer" translatable="false">Sensor hub accelerometer image</string>
    <string name="image_sensor_hub_accelerometer_cube" translatable="false">Sensor hub accelerometer cube image</string>
    <string name="image_sensor_hub_temperature" translatable="false">Sensor hub temperature image</string>
    <string name="image_sensor_hub_battery" translatable="false">Sensor hub battery image</string>
    <string name="image_sensor_hub_pressure" translatable="false">Sensor hub pressure image</string>
    <string name="alert_message_exit">Do you want to exit the application?</string>
    <string name="alert_message_exit_ok">OK</string>
    <string name="alert_message_exit_cancel">Cancel</string>
    <string name="alert_message_connect">Connecting to the device</string>
    <string name="alert_message_log_read" translatable="false">Reading the log file please wait...</string>
    <string name="alert_message_connect_title">Device Connection</string>
    <string name="alert_message_bluetooth_reconnect" translatable="false">Please Turn Bluetooth ON</string>
    <string name="alert_message_reconnect" translatable="false">Your connection has been lost.</string>
    <string name="alert_message_wait">Please wait..</string>
    <string name="alert_message_no_internet" translatable="false">No internet connection</string>
    <string name="alert_message_unkown" translatable="false">Do you want to go to GATT DB ?</string>
    <string name="alert_message_yes">Yes</string>
    <string name="alert_message_no">No</string>
    <string name="alert_message_retry">Retry</string>
    <string name="alert_message_unknown_title" translatable="false">No custom UI available !</string>
    <string name="alert_message_bonding_title">Bonding</string>
    <string name="alert_message_bonding_message" translatable="false">Bonding is in process \nPlease wait..</string>
    <string name="alert_message_prepare_title" translatable="false">Preparing Notifications</string>
    <string name="alert_message_prepare_message" translatable="false">Enabling all available notifications</string>
    <string name="alert_csc_weight" translatable="false">Please enter a valid weight !</string>
    <string name="alert_title_clear_cache" translatable="false">Clear Bluetooth Cache?</string>
    <string name="alert_message_clear_cache">Will clear all cache information of connected device. Connection will be lost. Do you want to continue?</string>
    <string name="alert_message_delete_log">Do you want to delete this log?</string>
    <string name="alert_message_ota_cancel">Do you want to cancel the OTA update?</string>
    <string name="alert_message_ota_resume">Do you want to resume the OTA Update?</string>
    <string name="alert_message_ota_pending">You have firmware upgrade in progress. Going back will stop the firmware upgrade and disconnect from the device. Do you want to continue?</string>
    <string name="alert_message_ota_user_warning">While firmware upgrade is in progress don\'t press back button or home button. Please stay in the page till the upgrade is complete</string>
    <string name="alert_message_write_error">Error occurred in writing data.</string>
    <string name="alert_message_ota_error">Firmware update canceled\nError: </string>
    <string name="alert_message_silicon_id_error" translatable="false">Error: The SiliconID or SiliconRev does not match</string>
    <string name="alert_message_checksum_error" translatable="false">Error: The checksum do not match</string>
    <string name="alert_message_row_out_of_bounds_error" translatable="false">Error: The row number exceeds the bounds</string>
    <string name="alert_message_write_error_code">Error code:</string>
    <string name="alert_title_error">Error</string>
    <string name="alert_message_try_again">Please try again.</string>
    <string name="alert_message_hid_warning" translatable="false">HID service related access may be restricted by the OS. Accessing the associated characteristics and descriptor may cause the app to crash</string>
    <string name="alert_message_file_copy" translatable="false">A cyacd file with the same name exists in CySmart folder! Do you want to replace the existing cyacd file?</string>
    <string name="alert_message_service_undiscovered">No services found</string>
    <string name="progress_tile_service_discovering">Service Discovery</string>
    <string name="progress_message_service_discovering">Discovering services. Please wait.</string>
    <string name="progress_message_reconnect"> Reconnecting to device. Please wait.</string>
    <string name="device_unknown">Unknown device</string>
    <string name="device_ble_not_supported">Bluetooth Low Energy not supported on device</string>
    <string name="device_bluetooth_on">Bluetooth turned on successfully</string>
    <string name="device_bluetooth_not_supported">Bluetooth not supported on device</string>
    <string name="device_signal_strength">RSSI:</string>
    <string name="device_signal_strength_unit">dBm</string>
    <string name="profile_control_unknown_service">Unknown Service</string>
    <string name="profile_control_no_device_message">Pull down to refresh…</string>
    <string name="profile_control_device_scanning">Refreshing, Please wait…</string>
    <string name="profile_cannot_connect_message">Cannot connect to the device</string>
    <string name="profile_control_stop_notification_toast">Notifications disabled</string>
    <string name="profile_control_stop_indication_toast">Indications disabled</string>
    <string name="profile_control_stop_both_notify_indicate_toast">All indications and notifications disabled</string>
    <string name="enable_notify_failed">Failed to enable notification(s).
        If you see this error repeatedly, disconnect and connect back to the device.</string>
    <string name="div_manufacturer_name">Manufacturer Name </string>
    <string name="div_model_name">Model Number </string>
    <string name="div_serial_name">Serial Number </string>
    <string name="div_hardware_name">Hardware Revision </string>
    <string name="div_firmware_name">Firmware Revision </string>
    <string name="div_software_name">Software Revision </string>
    <string name="div_system_name">System ID </string>
    <string name="div_regulatory_name">Regulatory Certification Data List </string>
    <string name="div_pnp_name">PnP ID </string>
    <string name="blood_pressure_start_btn">START</string>
    <string name="blood_pressure_stop_btn">STOP</string>
    <string name="hint_input_username">Username</string>
    <string name="hint_input_password">Password</string>
    <string name="remeber_id">Remember account ID</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="term_of_serivce">Terms of Service</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="more_then_interval">> Interval</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="title_age">Age</string>
    <string name="msg_pad_recommand">It is recommend to measure pulmonary artery diameter using another imaging method (2D, MRI, etc.) by trained clinicians.</string>
    <string name="msg_pad_autofill">The auto-filled pulmonary artery diameter is a reference value from random data. It is only used for measuring the trend of cardiac output parameters, NOT for absolute value measurement.</string>
</resources>