<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UIOperationControlSubsystem.intervalFragment">

    <TextView
        android:id="@+id/userInfoIntervalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_battery_full_black_24dp" />


    <ToggleButton
        android:id="@+id/intervalToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/togglebutton_selector"
        android:text=""
        android:textColor="@color/black"
        android:textOff="@string/blood_pressure_start_btn"
        android:textOn="@string/blood_pressure_stop_btn"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/block"
        android:orientation="vertical"
        android:padding="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interval_title"
                android:textColor="@color/intervalTextColor"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/intervalEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:backgroundTint="#E0E0E0"
                android:ems="10"
                android:hint=">=30"
                android:inputType="number"
                android:text="30"
                android:textAlignment="center"
                android:textColor="#4A4A4A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/durationTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration_title"
                android:textColor="@color/intervalTextColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/durationEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:backgroundTint="#E0E0E0"
                android:ems="10"
                android:hint="@string/more_then_interval"
                android:inputType="number"
                android:text="120"
                android:textAlignment="center"
                android:textColor="#4A4A4A" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataTitleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/TimeTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Time" />

        <TextView
            android:id="@+id/HRTitletextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hr_title" />

        <TextView
            android:id="@+id/VpkTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vpk_title" />

        <TextView
            android:id="@+id/VtiTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vti_title" />

        <TextView
            android:id="@+id/SVTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sv_title" />

        <TextView
            android:id="@+id/COTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/co_title" />
    </LinearLayout>

    <ListView
        android:id="@+id/intervelDataListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:divider="@null" />

</LinearLayout>