<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".UIOperationControlSubsystem.loginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/yuhul_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:gravity="end"
        android:textColorHint="@color/colorPrimary"
        app:counterEnabled="false"
        app:counterMaxLength="12"
        app:counterTextAppearance="?android:attr/textAppearanceMedium"
        app:errorEnabled="true"
        app:errorTextAppearance="?android:attr/textAppearanceSmall"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_username"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberIdCheckBox"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_circle_selector"
                android:button="@null"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/remeber_id"
                android:textColor="#FFFFFF" />
        </LinearLayout>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_weight="2"
        android:textColorHint="@color/colorPrimary"
        app:counterEnabled="false"
        app:counterMaxLength="12"
        app:counterTextAppearance="?android:attr/textAppearanceMedium"
        app:errorEnabled="true"
        app:errorTextAppearance="?android:attr/textAppearanceSmall"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint"
        app:passwordToggleDrawable="@drawable/visible"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        app:passwordToggleTintMode="multiply">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwEditTexit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#F9F9FB"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/block_b"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/no_account"
                android:textAlignment="center" />

            <Button
                android:id="@+id/signUpBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/sign_up"
                android:textColor="#170000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
